--- a/_posts/2018-11-25-ikigai.md
+++ b/_posts/2018-11-25-ikigai.md
@@ -13,7 +13,7 @@ Something I want to touch on in this piece is how I came to that decision. It’
 
 I did a little research, and stumbled across the Japanese concept of ikigai. Of course, I won’t explain it perfectly, so I encourage you to check this out on your own, but I’ll try my best. Ikigai is a Japanese term for “a reason for being,” similar to ‘raison d’etre’ and other expressions. In the culture of Okinawa, ikigai is thought of as “a reason to get up in the morning.” Seems pretty cool right? So what does it actually look like? Well, I’ll start with this venn diagram:
 
-<img class="center" src="/assets/images/ikigai.png" alt="Ikigai" height="50%" width="50%">
+<img class="center" src="{{ site.baseurl }}/assets/images/ikigai.png" alt="Ikigai" height="50%" width="50%">
 
 A four way venn diagram, so maybe not totally clear. Let’s try to understanding what’s going on. There are four categories, as mentioned. What you love, what you can be paid for, what the world needs, and what you’re good at. Each of these intersect to fill different roles in our life: profession, vocation (a side hustle or a “calling”), mission, and passion. Now it’s clear how passion alone is dangerous: it doesn’t factor in money or the world at large. At the center of all of these concepts is harmony: ikigai. There are also cautions surrounding the venn diagram. Let’s dissect them.
 
